--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-masonry-component": "^6.2.1",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.0"
+    "semantic-ui-react": "^2.0.0",
+    "shufflejs": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
