--- a/front/package.json
+++ b/front/package.json
@@ -11,9 +11,11 @@
     "react-dom": "^16.14.0",
     "react-masonry-component": "^6.2.1",
     "react-scripts": "3.4.3",
+    "react-xmasonry": "^3.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
-    "shufflejs": "^5.2.3"
+    "shufflejs": "^5.2.3",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
